crates/bevy-markdown/src/snapshots/bevy_markdown__tests__render_text_style-2.snap
---
source: crates/bevy-markdown/src/lib.rs
assertion_line: 212
expression: node.link_sections.clone()
---
[
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    None,
    Some(
        "https://example.com",
    ),
]
