crates/bevy-markdown/src/snapshots/bevy_markdown__tests__test_render_break_links.snap
---
source: crates/bevy-markdown/src/lib.rs
assertion_line: 319
expression: node.link_sections.clone()
---
[
    None,
    None,
    None,
]
