crates/bevy-markdown/src/snapshots/bevy_markdown__tests__test_render_text_style_complicated_links.snap
---
source: crates/bevy-markdown/src/lib.rs
assertion_line: 480
expression: node.link_sections.clone()
---
[
    None,
    None,
    None,
    None,
    None,
    None,
    Some(
        "https://google.com",
    ),
    Some(
        "https://google.com",
    ),
    Some(
        "https://google.com",
    ),
]
