crates/bevy-markdown/src/snapshots/bevy_markdown__tests__test_render_text_style_complicated_node.snap
---
source: crates/bevy-markdown/src/lib.rs
assertion_line: 473
expression: node.clone()
---
Text {
    sections: [
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "bold1",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " normal text\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Bold again",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " and then italic",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Inner links ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "can be styled",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "too",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
    ],
    alignment: Left,
    linebreak_behaviour: WordBoundary,
}
